# Maxine-AR-SDK

./: CHANGELOG  CMakeLists.txt  README.MD  version.h
bridge/: CMakeLists.txt  README.md
bridge/include/: nvar_bridge.h
bridge/src/: nvar_bridge.cpp
include/: nvTransferD3D.h  nvTransferD3D11.h
samples/BodyTrack/: BodyEngine.cpp
samples/FaceTrack/: FaceEngine.cpp  FaceEngine.h
samples/GazeRedirect/: GazeEngine.h
